--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/codeeffects/common.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/codeeffects/gray.css" />
     <script src="%PUBLIC_URL%/assets/js/codeeffects/editor.js"></script>
-
-    <title>React App</title>
+<!-- 
+    <title>React App</title> -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
