--- a/public/index.html
+++ b/public/index.html
@@ -3,29 +3,22 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="ECMPS is your..." />
+    <meta name="keywords" content="..." />
+    <meta property="og:site_name" content="Emissions Collection & Monitoring Plan System (ECMPS)">
+    <meta property="og:url" content="https://ecmps.epa.gov">
+    <meta name="MobileOptimized" content="width">
+    <meta name="HandheldFriendly" content="true">
 
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="/env-config.js"></script>
+    
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="manifest" href="/manifest.json" />
 
-    <title>ECMPS Home</title>
+    <title>Emissions Collection & Monitoring Plan System (ECMPS)</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="root" aria-hidden="false"></div>
   </body>
 </html>
